Rewrite of all file directory and move index to public directory

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -6,14 +6,14 @@
   {% block navContainer %}
     <nav class="navbar navbar-marketing navbar-expand-lg bg-secondary navbar-dark fixed-top">
       <div class="container bg-secondary px-5">
-        <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
+        <a class="navbar-brand text-white" href="/../mon-blog/">Adjoukou AGBELOU</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i data-feather="menu"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+              <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog/">Accueil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
@@ -44,7 +44,7 @@
       <div class="page-header-ui-content">
         <div class="container px-5">
           <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 d-lg-none" data-aos-delay="100"><img class="img-fluid" src="/../mon-blog/public/assets/img/backgrounds/Adjoukou-Agbelou-img.jpg" alt="Adjoukou AGBELOU Développeur Concepteur D'application"/>
+            <div class="col-lg-6 d-lg-none" data-aos-delay="100"><img class="img-fluid" src="/../assets/img/backgrounds/Adjoukou-Agbelou-img.jpg" alt="Adjoukou AGBELOU Développeur Concepteur D'application"/>
             </div>
             <div class="col-lg-6 mb-5">
               <h1 class="page-header-ui-title mt-5">Concepteur Développeur D'Application PHP/SYMFONY</h1>
@@ -54,13 +54,13 @@
                   Appeler Ici
                   <i class="ms-2" data-feather="arrow-right"></i>
                 </a>
-                <a class="btn btn-lg btn-secondary-soft text-secondary fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
+                <a class="btn btn-lg btn-secondary-soft text-secondary fw-500" href="/../assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
                   <i class="fas fa-file-pdf"></i>
                   Télécharger mon CV
                 </a>
               </div>
             </div>
-            <div class="col-lg-6 d-none d-lg-block" data-aos-delay="100"><img class="img-fluid" src="/../mon-blog/public/assets/img/backgrounds/Adjoukou-Agbelou-img.jpg" alt="Adjoukou AGBELOU Développeur Concepteur D'application"/>
+            <div class="col-lg-6 d-none d-lg-block" data-aos-delay="100"><img class="img-fluid" src="/../assets/img/backgrounds/Adjoukou-Agbelou-img.jpg" alt="Adjoukou AGBELOU Développeur Concepteur D'application"/>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/admin-dashboard-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/admin-dashboard-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -184,7 +184,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
             <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/LBA-descktop-mobile.jpg" alt="les Bâtisseurs"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/LBA-descktop-mobile.jpg" alt="les Bâtisseurs"/>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
@@ -214,7 +214,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/asi-bat-descktop-mobile.jpg" alt="asi-bat"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/asi-bat-descktop-mobile.jpg" alt="asi-bat"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -244,7 +244,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
             <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/mon-blog-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/mon-blog-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
@@ -274,7 +274,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/coming-soon-lba-descktop-mobile.jpg" alt="Coming-soon"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/coming-soon-lba-descktop-mobile.jpg" alt="Coming-soon"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -304,7 +304,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
             <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/Chalet-Caviar-desktop-mobile.jpg" alt="Location de Chalets"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/Chalet-Caviar-desktop-mobile.jpg" alt="Location de Chalets"/>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
@@ -334,7 +334,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/LesFilms-PleinAire-Desktop-mobile.jpg" alt="Les films de plein air"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/LesFilms-PleinAire-Desktop-mobile.jpg" alt="Les films de plein air"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -364,7 +364,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
             <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/myma-chocolat-descktop-mobile.jpg" alt="Myma Chocolat"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/myma-chocolat-descktop-mobile.jpg" alt="Myma Chocolat"/>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
@@ -394,7 +394,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/myma-chocolat-dashbord-descktop-mobile.jpg" alt="Myma Chocolat Espace Admin"/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../assets/img/portfolio-Img/myma-chocolat-dashbord-descktop-mobile.jpg" alt="Myma Chocolat Espace Admin"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -434,7 +434,7 @@
             <a class="text-secondary" href="mailto:mike.agbelou@gmail.com">mike.agbelou@gmail.com</a>
           </div>
           <div class="col-lg-4 text-lg-end">
-            <a class="btn btn-teal btn-lg fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
+            <a class="btn btn-teal btn-lg fw-500" href="/../assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
               <i class="fas fa-file-pdf text-white-75 me-2"></i>
               Télécharger mon CV
             </a>
