--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -7,8 +7,8 @@
       <meta name="description" content="Développeur Concepteur D'Application PHP/SYMFONY Adjoukou AGBELOU"/>
       <meta name="author" content="Développeur Full Satck Adjoukou AGBELOU"/>
       <title>Adjoukou AGBELOU Blog</title>
-      <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
-      <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/favicon.ico"/>
+      <link rel="icon" type="image/x-icon" href="/../assets/img/logo.png"/>
+      <link rel="icon" type="image/x-icon" href="/../assets/favicon.ico"/>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
       <!-- font awesome icon-->
       <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
@@ -16,9 +16,9 @@
 
       <!-- Core theme CSS (includes Bootstrap)-->
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-      <link href="/../mon-blog/public/css/booststrapStyles.css" rel="stylesheet"/>
-      <link href="/../mon-blog/public/css/myStyles.css" rel="stylesheet"/>
-      <link href="/../mon-blog/public/css/uiStyles.css" rel="stylesheet"/>
+      <link href="/../css/booststrapStyles.css" rel="stylesheet"/>
+      <link href="/../css/myStyles.css" rel="stylesheet"/>
+      <link href="/../css/uiStyles.css" rel="stylesheet"/>
     </head>
   {% endblock %}
 
@@ -32,14 +32,14 @@
             {% block navContainer %}
               <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
                 <div class="container px-5">
-                  <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
+                  <a class="navbar-brand text-white" href="/../mon-blog/">Adjoukou AGBELOU</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i data-feather="menu"></i>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+                        <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog/">Accueil</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
@@ -104,7 +104,7 @@
                 <div class="text-uppercase-expanded text-xs mb-4">Liens</div>
                 <ul class="list-unstyled mb-0">
                   <li class="mb-2 nav-item">
-                    <a class="{% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+                    <a class="{% if page == 'home' %}active{% endif %}" href="/../mon-blog/">Accueil</a>
                   </li>
                   <li class="mb-2 nav-item">
                     <a class="{% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
@@ -132,10 +132,10 @@
       </div>
     </div>
     {% block JsLink %}
-      <script src="/../mon-blog/public/js/boostrapBundleMinScripts.js"></script>
+      <script src="/../js/boostrapBundleMinScripts.js"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script src="/../mon-blog/public/js/passwordShow.js"></script>
-      <script src="/../mon-blog/public/js/blogJs.js"></script>
+      <script src="/../js/passwordShow.js"></script>
+      <script src="/../js/blogJs.js"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     {% endblock %}
   </body>
