commit to update .htaccess file 23.01.2023

--- a/app/views/admin/blog-management-edit-post.html.twig
+++ b/app/views/admin/blog-management-edit-post.html.twig
@@ -76,7 +76,7 @@
             </div>
             <div class="card-body">
               <input type="file" name="postImage" class="form-control" id="inputGroupFile" required="required" placeholder="Format Jpg requis*" title="Veuillez importer une image jpeg (* format .jpg)" accept=".jpg" value="{{ post.imageUrl }}">
-                <img class="img-account-profile m-2" src="/../assets/img/postImg/{{ post.imageUrl }}" alt="post image"/></input>
+                <img class="img-account-profile m-2" src="/../mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="post image"/></input>
               <label for="postImage" class="file-label">
                 <small class="text-muted">Format requis : (* .jpg)</small>
               </label>
