--- a/app/views/admin/dashboard-delete-post.html.twig
+++ b/app/views/admin/dashboard-delete-post.html.twig
@@ -57,7 +57,7 @@
                 <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="L'image de couverture du Post en format JPEG"></i>
               </div>
               <div class="card-body">
-                <img class="img-account-profile m-2" src="/../assets/img/postImg/{{ post.imageUrl }}" alt="post image"/>
+                <img class="img-account-profile m-2" src="/../mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="post image"/>
               </div>
             </div>
             <div class="card card-header-actions mb-4 mb-lg-0">
