--- a/app/views/user/login.html.twig
+++ b/app/views/user/login.html.twig
@@ -7,9 +7,9 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Connexion</title>
-    <link href="/../css/adminStyles.css" rel="stylesheet"/>
-    <link rel="icon" type="image/x-icon" href="/../assets/img/logo.png"/>
-    <link rel="icon" type="image/x-icon" href="/../favicon.ico"/>
+    <link href="/../mon-blog/public/css/adminStyles.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
+    <link rel="icon" type="image/x-icon" href="/../mon-blog/public/favicon.ico"/>
     <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.js"></script>
@@ -101,12 +101,12 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="/../js/scripts.js"></script>
+    <script src="/../mon-blog/public/js/scripts.js"></script>
     <!-- Bootstrap core JS-->
     <!-- Core theme JS-->
-    <script src="/../js/boostrapBundleMinScripts.js"></script>
+    <script src="/../mon-blog/public/js/boostrapBundleMinScripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/../js/passwordShow.js"></script>
-    <script src="/../js/blogJs.js"></script>
+    <script src="/../mon-blog/public/js/passwordShow.js"></script>
+    <script src="/../mon-blog/public/js/blogJs.js"></script>
   </body>
 </html>
